prevent colliding hamburger, logo, utility nav on mobile

--- a/app/assets/stylesheets/omni_nav/uninav/uninav.scss
+++ b/app/assets/stylesheets/omni_nav/uninav/uninav.scss
@@ -150,7 +150,7 @@ html {
       grid-area: cta;
       width: 100%;
       display: grid;
-      justify-content: end;
+      justify-content: flex-end;
       align-content: center;
       align-items: center;
 
@@ -195,7 +195,7 @@ html {
       width: 100%;
       height: 100%;
       display: grid;
-      justify-content: end;
+      justify-content: flex-end;
       border-bottom: 1px solid $uninav-light-grey;
       height: $uninav-div-height;
       align-items: center;
@@ -228,7 +228,7 @@ html {
 
       ul {
         display: flex;
-        justify-content: end;
+        justify-content: flex-end;
         align-items: center;
 
         li {
@@ -594,7 +594,7 @@ html {
 
   .uninav__utility-nav--wrapper {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
   }
 }
 
@@ -737,7 +737,7 @@ html {
         display: flex;
         -webkit-box-pack: justify;
         -ms-flex-pack: justify;
-        justify-content: end;
+        justify-content: flex-end;
         -webkit-box-align: center;
         -ms-flex-align: center;
         align-items: start;
@@ -777,38 +777,58 @@ html {
 }
 
 @media only screen and (max-width: 750px) {
-  .uninav {
-    &__logo,
-    #uninav-logo .chapman-logo {
-      width: 100%;
-      border-bottom: none;
+  #uninav {
+    .uninav {
+      &__logo,
+      .chapman-logo {
+        border-bottom: none;
 
-      &--secondary {
-        display: none;
+        &--secondary {
+          display: none;
+        }
       }
     }
   }
 }
 
 @include respond(phone) {
-  .uninav {
-    &__logo,
-    #uninav-logo .chapman-logo {
-      width: 100%;
-      border-bottom: none;
+  #uninav {
+    .uninav {
+      &__logo {
+        .chapman-logo {
+          width: 100%;
+          border-bottom: none;
 
-      &--secondary {
-        @include qbal-slideRight-exit;
-        display: none;
+          &--secondary {
+            @include qbal-slideRight-exit;
+            display: none;
+          }
+        }
       }
-    }
 
-    &__utility-nav--wrapper {
-      border-bottom: none;
+      &__utility-nav--wrapper {
+        border-bottom: none;
+      }
     }
   }
 }
 
+@media only screen and (max-width: 400px) {
+  #uninav {
+    grid-template-areas: "hamburger utility";
+    grid-template-rows: 60px;
+    grid-template-columns: 1fr 2fr;
+    .uninav {
+      &__logo,
+      &__global-nav {
+        display: none;
+      }
+      &__hamburger-menu {
+        justify-content: start;
+      }
+    }
+  }
+}
 html.off-canvas__blur {
   #js-off-canvas-overlay {
     animation: increaseOpacity;
